# lhist2532

./: PaletteXav.soc  README.md  beamerthemeXAV.sty
Labo-ia/: pyproject.toml
aws/: .gitignore  README.md  deployment.py  main.py  pyproject.toml  settings.py  user_data.sh
labo/: README.md  app.py  config.env  ecs_deploy.sh  instructions.odt  pyproject.toml  settings.py  utils.py
presentation/: README.md
presentation/resources/: MMLUPro.ipynb
resources/: exercice_2c.txt  exercice_3.md  exercice_4b.eac.xml
